# CodexRosetta

./: .dockerignore  .env.example  .gitignore  Dockerfile  INSPECTION_REPORT.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  UNHANDLED_PARAMS.md  docker-compose.yml  pyproject.toml  search_providers.json  search_providers.json.example
.github/workflows/: docker-publish.yml  pypi-publish.yml
codex_rosetta/: __init__.py  config.py  main.py
codex_rosetta/api/: dependencies.py  keys_router.py  router.py  settings_router.py  web_router.py
codex_rosetta/audit/: logger.py  middleware.py
codex_rosetta/builtin_tools/: code_interpreter.py  computer_use.py  file_search.py  image_generation.py  registry.py  web_search.py
codex_rosetta/converters/: content_transformer.py  input_transformer.py  request_converter.py  response_converter.py  stream_converter.py  tool_transformer.py
codex_rosetta/keys/: manager.py
codex_rosetta/models/: chat_completions_api.py  common.py  responses_api.py
codex_rosetta/search/: __init__.py  base.py  brave_provider.py  duckduckgo_provider.py  formatter.py  http_provider.py  searxng_provider.py  tavily_provider.py
codex_rosetta/state/: conversation_store.py  stream_state.py
codex_rosetta/upstream/: client.py  provider_adapters.py
tests/: conftest.py  test_content_transformer.py  test_input_transformer.py  test_integration.py  test_new_params.py  test_request_converter.py  test_response_converter.py  test_stream_converter.py  test_tool_transformer.py  test_web_search.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+19 files in other folders)
